# pacgen

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  example_box.cpp  example_cylinder.cpp  example_mesh.cpp  example_obj.cpp
src/: CMakeLists.txt  gen_container.h  gen_kdtree.h  gen_num.cpp  gen_num.h  gen_pack.cpp  gen_pack.h  gen_usdf.cpp  gen_usdf.h  gen_utils.cpp  gen_utils.h  mesh.cpp  mesh.h  packgen-config.cmake  vectors.h
